# finetuning

./: .gitignore  LICENSE  README.md  pyproject.toml
diary/: day1.md
src/finetuning/data/: utils.py
src/finetuning/notebooks/: train_single_step.ipynb  train_single_step_colab.ipynb
