[project]
name = "finetuning"
version = "0.1.0"
description = "Basic finetuning experiments"
authors = [
    {name = "fnestaas", email = "fnestaas@proton.me"},
]
dependencies = ["datasets>=3.3.2", "numpy>=2.2.3", "matplotlib>=3.10.1", "torch>=2.6.0", "ipykernel>=6.29.5", "notebook>=7.3.2", "transformers>=4.49.0", "trl>=0.15.2", "polars>=1.24.0", "pandas>=2.2.3", "peft>=0.14.0", "scipy>=1.15.2", "bitsandbytes>=0.45.3"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
